--- a/src/test/resources/jdbc-test.properties
+++ b/src/test/resources/jdbc-test.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:mem:document-management
+jdbc.url=jdbc:hsqldb:mem:cinema
 jdbc.username=sa
 jdbc.password=
