--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
             <version>3.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
